--- a/Readme
+++ b/Readme
@@ -1,3 +1,6 @@
+This is my repository for Sebastian's chess-AI coding challenge. The challenge is to build the strongest possible AI using only 1024 compiler tokens, which is why my code is so dense. Sebastian provided the chess engine for us.
+
+
 
 Version 1:
 
